--- a/index.html
+++ b/index.html
@@ -2,16 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Lab: Event Listeners With JavaScript</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Event Listeners Lab</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Lab: Event Listeners With JavaScript</h1>
-  <button id="changeColorButton">Change Background Color</button>
-  <button id="resetColorButton">Reset Background Color</button>
+  <h1>Event Listeners Lab</h1>
+
+  <!-- Buttons -->
+  <button id="changeColorButton">Change Background</button>
+  <button id="resetColorButton">Reset Background</button>
+
+  <hr>
+
+  <!-- Key press display -->
   <p id="keyPressDisplay">Press any key...</p>
+
+  <hr>
+
+  <!-- Text input -->
   <input type="text" id="textInput" placeholder="Type something...">
   <p id="textInputDisplay">Your input will be displayed here.</p>
+
   <script src="index.js"></script>
 </body>
 </html>
